# brevity-client

./: Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
brevity_client/: client.py  main_window.py
tests/: test_brevity_client.py
