[tool.poetry]
name = "brevity.client"
version = "0.1.0"
description = ""
authors = ["rubus-dev <rubusdev22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
